<resources>
    <string name="app_name">Lista De Compras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categorias">Categorias</string>
    <string name="produtos">Produtos</string>
    <string name="categoria">Categoria</string>
    <string name="salvar">Salvar</string>
    <string name="id_da_categoria">Id da Categoria</string>
    <string name="nome_da_categoria">Nome da Categoria</string>
    <string name="consultar_pelo_id">Consultar pelo id</string>
    <string name="remover_pelo_id">Remover pelo id</string>
    <string name="id_do_produto">Id do Produto</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="produto">Produto</string>
</resources>