<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CategoriasFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_nome_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_da_categoria" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_nome_id_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_da_categoria" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_get_by_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consultar_pelo_id" />

        <Button
            android:id="@+id/btn_remove_by_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remover_pelo_id" />

    </LinearLayout>

</FrameLayout>